fix column spacing within ibm-container

--- a/css/scss/beta/_banded.scss
+++ b/css/scss/beta/_banded.scss
@@ -6,26 +6,31 @@
 }
 
 .ibm-landing-page.ibm-banded #ibm-content-head {
-	margin: 0px auto;
-	padding: 0px 10px;
+	margin: 0 auto;
+	padding: 0 10px;
 	width: 960px;
 }
 
 .ibm-landing-page.ibm-banded #ibm-content-main > p {
-	margin: 0px auto;
+	margin: 0 auto;
 	width: 940px;	
 }
 
 .ibm-landing-page.ibm-banded #ibm-content .ibm-columns {
-	margin: 0px auto;
+	margin: 0 auto;
 }
 
 .ibm-landing-page.ibm-banded #ibm-content .ibm-columns .ibm-columns {
-	margin: 0px -10px;
+	margin: 0 -10px;
 }
 
-.ibm-landing-page.ibm-banded #ibm-content .ibm-columns .ibm-ribbon .ibm-columns {
-	margin: 0px;
+.ibm-landing-page.ibm-banded #ibm-content .ibm-container .ibm-columns {
+	margin: 0 -20px;
+}
+
+.ibm-landing-page.ibm-banded #ibm-content .ibm-columns .ibm-ribbon .ibm-columns,
+.ibm-landing-page.ibm-banded #ibm-content .ibm-container .ibm-ribbon-pane .ibm-columns {
+	margin: 0;
 }
 
 .ibm-banded .ibm-band {
@@ -43,7 +48,7 @@
 .ibm-landing-page.ibm-banded #ibm-content-main > div.ibm-rule, 
 .ibm-landing-page.ibm-banded #ibm-content-main > div.ibm-alternate-rule, 
 .ibm-landing-page.ibm-banded #ibm-content-main > div.ibm-rule-alternate {
-	margin: 10px 0px;
+	margin: 10px 0;
 }
 
 .ibm-landing-page.ibm-banded #ibm-content-main > .ibm-container,
