--- a/css/scss/shared/_grid.scss
+++ b/css/scss/shared/_grid.scss
@@ -27,6 +27,15 @@
     padding: 0px ($landingSpace / 2) ($landingSpace / 2);
 }
 
+.ibm-landing-page #ibm-content .ibm-container .ibm-columns {
+	width: auto;
+	margin: 0px -20px;
+}
+
+.ibm-landing-page #ibm-content .ibm-container .ibm-ribbon-pane .ibm-columns {
+	margin:0px -10px;
+}
+
 .ibm-landing-page #ibm-content .ibm-columns .ibm-columns,
 .ibm-content-expand #ibm-content .ibm-columns .ibm-columns {
     padding: 0px;
@@ -108,6 +117,7 @@
 }
 
 .ibm-columns .ibm-col-4-2,
+.ibm-landing-page #ibm-content .ibm-columns .ibm-col-2-1,
 .ibm-landing-page #ibm-content .ibm-columns .ibm-col-4-2,
 .ibm-columns .ibm-col-6-3,
 .ibm-landing-page #ibm-content .ibm-columns .ibm-col-6-3,
